## Process this file with automake to produce Makefile.in.

bin_PROGRAMS = apachetop

apachetop_SOURCES = apachetop.cc log.cc inlines.cc ohtbl.cc map.cc queue.cc \
                    display.cc hits_circle.cc timed_circle.cc filters.cc \
                    resolver.cc


noinst_HEADERS = apachetop.h log.h ohtbl.h map.h queue.h \
                 display.h hits_circle.h circle.h timed_circle.h filters.h \
                 resolver.h pcre2_cpp_wrapper.h

MAINTAINERCLEANFILES = Makefile.in
